[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/game_piece_holder/game_piece_holder.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/table_top.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/fx/wdomino__pressureplatethump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/music/Traversing-Godmode.mp3" type="AudioStream" id=4]

[node name="TableTop" type="Node2D"]
script = ExtResource( 2 )
background_color = Color( 0.0588235, 0.0392157, 0.027451, 1 )
round_complete_scene_path = "res://scenes/progress_summary.tscn"

[node name="BoardPosition" type="Position2D" parent="."]
position = Vector2( 384, 192 )

[node name="GamePieceHolder" parent="." instance=ExtResource( 1 )]

[node name="DropPieceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="GamePlayMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "Music"
